added a class to body
Body class homepage
Added class to css
Deleted div

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,4 @@
- #div1.  {
+ body.homepage {
 	background-size: cover;
     background-image: url("http://i3.mirror.co.uk/incoming/article11124681.ece/ALTERNATES/s810/Waves-crash-against-the-seawall-in-Fajardo-as-Hurricane-Irma-slammed-across-islands-in-the-northern.jpg");
 }
